
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int PGSemaphore ;


 scalar_t__ PGSemaphoreTryLock (int ) ;

void
PGSemaphoreReset(PGSemaphore sema)
{




 while (PGSemaphoreTryLock(sema))
              ;
}
